Changed the deployment folder in the config file

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ language: 'en-uk'
 words_per_minute: 200
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /jasper2/
+baseurl: /
 
 # Website info
 title: Ghost
@@ -32,7 +32,7 @@ disqus: False
 disqus_shortname: jekyller # replace with your disqus username
 
 # Google Analytics
-google_analytics: UA-69281367-1 # replace with your GA tracking identifier
+# google_analytics: UA-69281367-1 # replace with your GA tracking identifier
 
 # Permalinks
 permalink: /:title
@@ -67,15 +67,15 @@ feed:
 # repo defaults to USERNAME.github.io
 # Branch defaults to "source" for USERNAME.github.io
 # or "master" otherwise
-safe: False
-lsi: False
-username: jekyller
-repo: jasper2
-branch: master
-relative_source: ../jasper2/
-destination: ../jasper2-pages/
-production_url:  https://jekyller.github.io/jasper2/
-source_url:  https://github.com/jekyller/jasper2/
+# safe: False
+# lsi: False
+# username: jekyller
+# repo: jasper2
+# branch: master
+# relative_source: ../jasper2/
+# destination: ../jasper2-pages/
+# production_url:  https://jekyller.github.io/jasper2/
+# source_url:  https://github.com/jekyller/jasper2/
 
 exclude:
   - assets/css
