--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ language: 'en-uk'
 words_per_minute: 200
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /
+baseurl: /jasper2/
 
 # Website info
 title: Ghost
@@ -32,7 +32,7 @@ disqus: False
 disqus_shortname: jekyller # replace with your disqus username
 
 # Google Analytics
-# google_analytics: UA-69281367-1 # replace with your GA tracking identifier
+google_analytics: UA-69281367-1 # replace with your GA tracking identifier
 
 # Permalinks
 permalink: /:title
